syntax = "proto3";
package calculator;

option go_package="github.com/Kcih4518/grpc-golan/calculator/proto";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}